test/Execute/SyntaxErrorTest/def_missing_return_type_arrow.typh
def add(x: int) int {
    return x
}

"""stderr
syntax error: $FILE:1:17
  expected '{'

    1 |  def add(x: int) int {
                         ^

syntax error: $FILE:1:20
  expected '}'

    1 |  def add(x: int) int {
                            ^

syntax error: $FILE:1:21
  unknown tokens

    1 |  def add(x: int) int {
    2 |      return x
    3 |  }
    ...
"""
